Fix setting up custom value for K8s_NAMESPACE
This commit fixes setting up custom value for K8s_NAMESPACE when namespace is not already created.
The notebook-controller explicitly creates '*-system' namespace. The changes include removing any namespace created by
the controller and replacing namespace values for all resources

--- a/components/notebook-controller/config/overlays/openshift/kustomization.yaml
+++ b/components/notebook-controller/config/overlays/openshift/kustomization.yaml
@@ -19,5 +19,6 @@ configMapGenerator:
       - USE_ISTIO=false
       - ADD_FSGROUP=false
 patchesStrategicMerge:
+  - remove_namespace_patch.yaml
   - manager_openshift_patch.yaml
   - manager_service_openshift_patch.yaml
