Enable culling in notebook controller
- Add culling environment variables to notebook controller deployment.
- Add culling healthcheck to oauth proxy `skip-auth-regex` flag.

The culling configuration will be managed in `odh-manifests` by creating a configmap similar to this:

```yaml
cat <<EOF | oc apply -f -
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: notebook-controller-culler-config
data:
  ENABLE_CULLING: "true"
  CULL_IDLE_TIME: "60" # In minutes (1 hour)
  IDLENESS_CHECK_PERIOD: "5" # In minutes
EOF
```

Find docs at https://docs.arrikto.com/ops/kubeflow/culling.html

--- a/components/notebook-controller/config/overlays/openshift/manager_openshift_patch.yaml
+++ b/components/notebook-controller/config/overlays/openshift/manager_openshift_patch.yaml
@@ -13,6 +13,24 @@ spec:
                 configMapKeyRef:
                   name: config
                   key: ADD_FSGROUP
+            - name: ENABLE_CULLING
+              valueFrom:
+                configMapKeyRef:
+                  name: notebook-controller-culler-config
+                  key: ENABLE_CULLING
+                  optional: true
+            - name: CULL_IDLE_TIME
+              valueFrom:
+                configMapKeyRef:
+                  name: notebook-controller-culler-config
+                  key: CULL_IDLE_TIME
+                  optional: true
+            - name: IDLENESS_CHECK_PERIOD
+              valueFrom:
+                configMapKeyRef:
+                  name: notebook-controller-culler-config
+                  key: IDLENESS_CHECK_PERIOD
+                  optional: true
           resources:
             limits:
               cpu: 500m
