--- a/components/odh-notebook-controller/Makefile
+++ b/components/odh-notebook-controller/Makefile
@@ -3,6 +3,9 @@
 IMG ?= quay.io/opendatahub/odh-notebook-controller
 TAG ?= $(shell git describe --tags --always)
 
+KF_IMG ?= quay.io/opendatahub/kubeflow-notebook-controller
+KF_TAG ?= 1.6-9ae9413
+
 # ENVTEST_K8S_VERSION refers to the version of kubebuilder assets to be downloaded by envtest binary.
 ENVTEST_K8S_VERSION = 1.23
 
@@ -118,14 +121,18 @@ endif
 
 .PHONY: setup-kf
 setup-kf: kustomize ## Replace Kustomize manifests with your environment configuration.
-	sed -i'' -e 's@namespace: .*@namespace: '"${K8S_NAMESPACE}"'@' \
+	sed -i'' -e 's,namespace: .*,namespace: '"${K8S_NAMESPACE}"',' \
 		../notebook-controller/config/overlays/openshift/kustomization.yaml
+	sed -i'' -e 's,newName: .*,newName: '"${KF_IMG}"',' \
+		../notebook-controller/config/overlays/openshift/kustomization.yaml
+	sed -i'' -e 's,newTag: .*,newTag: '"${KF_TAG}"',' \
+ 	../notebook-controller/config/overlays/openshift/kustomization.yaml
 
 .PHONY: setup
 setup: manifests kustomize ## Replace Kustomize manifests with your environment configuration.
-	sed -i'' -e 's@namespace: .*@namespace: '"${K8S_NAMESPACE}"'@' ./config/default/kustomization.yaml
-	sed -i'' -e 's@newName: .*@newName: '"${IMG}"'@' ./config/base/kustomization.yaml
-	sed -i'' -e 's@newTag: .*@newTag: '"${TAG}"'@' ./config/base/kustomization.yaml
+	sed -i'' -e 's,namespace: .*,namespace: '"${K8S_NAMESPACE}"',' ./config/default/kustomization.yaml
+	sed -i'' -e 's,newName: .*,newName: '"${IMG}"',' ./config/base/kustomization.yaml
+	sed -i'' -e 's,newTag: .*,newTag: '"${TAG}"',' ./config/base/kustomization.yaml
 
 .PHONE: deploy-kf
 deploy-kf: setup-kf ## Deploy kubeflow controller to the Openshift cluster.
