Include odh notebook-controller manifests to the repos
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/components/notebook-controller/config/overlays/openshift/kustomization.yaml
+++ b/components/notebook-controller/config/overlays/openshift/kustomization.yaml
@@ -3,15 +3,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
-namespace: notebook-controller-system
+namespace: opendatahub
 commonLabels:
   app.kubernetes.io/part-of: odh-notebook-controller
   component.opendatahub.io/name: kf-notebook-controller
   opendatahub.io/component: "true"
 images:
-  - name: public.ecr.aws/j1r0q0g6/notebooks/notebook-controller
+  - name: docker.io/kubeflownotebookswg/notebook-controller
     newName: quay.io/opendatahub/kubeflow-notebook-controller
-    newTag: latest
+    newTag: v1.7.0-2
 configMapGenerator:
   - name: config
     behavior: merge
