--- a/components/notebook-controller/config/rbac/kustomization.yaml
+++ b/components/notebook-controller/config/rbac/kustomization.yaml
@@ -1,9 +1,13 @@
 resources:
 - role.yaml
 - role_binding.yaml
-- leader_election_role.yaml
-- leader_election_role_binding.yaml
 - user_cluster_roles.yaml
+
+# Uncomment the following lines if we want to enable
+# leader election for the controller manager.
+# - leader_election_role.yaml
+# - leader_election_role_binding.yaml
+
 # Comment the following 3 lines if you want to disable
 # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
 # which protects your /metrics endpoint.
