--- a/components/notebook-controller/config/overlays/openshift/kustomization.yaml
+++ b/components/notebook-controller/config/overlays/openshift/kustomization.yaml
@@ -11,7 +11,7 @@ commonLabels:
 images:
   - name: docker.io/kubeflownotebookswg/notebook-controller
     newName: quay.io/opendatahub/kubeflow-notebook-controller
-    newTag: v1.7.0-2
+    newTag: 1.7-870980f
 configMapGenerator:
   - name: config
     behavior: merge
