--- a/components/odh-notebook-controller/config/base/kustomization.yaml
+++ b/components/odh-notebook-controller/config/base/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
 images:
   - name: quay.io/opendatahub/odh-notebook-controller
     newName: quay.io/opendatahub/odh-notebook-controller
-    newTag: v1.7.0-2
+    newTag: 1.7-870980f
