--- a/components/notebook-controller/Dockerfile
+++ b/components/notebook-controller/Dockerfile
@@ -17,7 +17,7 @@ COPY common /workspace/common
 
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
-RUN cd /workspace/notebook-controller && go mod download
+RUN cd /workspace/notebook-controller && go mod download all
 
 WORKDIR /workspace/notebook-controller
 
