--- a/components/odh-notebook-controller/Dockerfile
+++ b/components/odh-notebook-controller/Dockerfile
@@ -15,7 +15,7 @@ COPY odh-notebook-controller /workspace/odh-notebook-controller
 
 # cache deps before building and copying source so that we don't need to re-download as much
 # and so that source changes don't invalidate our downloaded layer
-RUN cd /workspace/odh-notebook-controller && go mod download
+RUN cd /workspace/odh-notebook-controller && go mod download all
 
 WORKDIR /workspace/odh-notebook-controller
 
