--- a/.github/workflows/notebook_controller_unit_test.yaml
+++ b/.github/workflows/notebook_controller_unit_test.yaml
@@ -1,21 +1,24 @@
 name: Run Notebook Controller unit tests
 on:
+  push:
   pull_request:
     paths:
       - components/notebook-controller/**
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.17'
         check-latest: true
+        go-version-file: components/notebook-controller/go.mod
+        cache-dependency-path: components/notebook-controller/go.sum
 
     - name: Run unit tests
       run: |
